IGNITE-19476 On demand deploy units API
Fix comments